--- a/src/app/playerlist.component.css
+++ b/src/app/playerlist.component.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
 #playerList{ position: relative;}
-#playerList .container{ padding:30px 0; }
+#playerList .container{ padding:30px 0; position:relative; z-index: 1; }
 .eachplayer{ overflow:hidden; text-align:center;background:#FFF;border-radius:10px; color:#333;padding:10px; margin:10px;box-shadow: 2px 2px 21px #000; cursor: pointer; position:relative;z-index: 1;}
 .eachplayer:hover{ border: 1px solid #000;}
 .eachplayer img{width:80%;border-radius:50%;}
-.eachplayer ul{padding: 0; margin:10px 0;}
-.eachplayer ul li{border-bottom: 1px solid #CCC;}
+.eachplayer ul{padding: 0; margin:10px 0; list-style: none;float: left;}
+.eachplayer ul li{border-bottom: 1px solid #CCC;float: left; width:100%}
 .overlaybox{background-color:#000; opacity: 0.5; height: 100%; width:100%; position:absolute; top:0;}
