--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
             <h1 id="homeHeading">You or Your Favorite Player May Be List It Down Here!</h1>
             <hr>
             <p>If you don't go after what you want, you'll never have it. If you don't ask, the answer is always no. If you don't stemforward, you're always in the same place.</p>
-            <a href="#playerList" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <a href="#player-container" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
 </header>
